--- a/app/globals.css
+++ b/app/globals.css
@@ -18,16 +18,52 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  font-family: 'Inter', sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+.activeScroll i {
+  color: rgb(74, 222, 128) !important;
+}
+
+.neonText:hover {
+  color: #fff;
+  box-shadow: 0 0 .2rem #fff,
+    0 0 .2rem #fff,
+    0 0 2rem #bc13fe,
+    0 0 0.8rem #bc13fe,
+    0 0 2.8rem #bc13fe,
+    inset 0 0 1.3rem #bc13fe;
+  outline: 0.2rem solid #fff;
+}
+
+.neonText.blink {
+  animation: pulsate 2.5s infinite alternate;
+}
+
+
+@keyframes pulsate {
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+    box-shadow:
+      0 0 .2rem #fff,
+      0 0 .2rem #fff,
+      0 0 2rem #bc13fe,
+      0 0 0.8rem #bc13fe,
+      0 0 2.8rem #bc13fe,
+      inset 0 0 1.3rem #bc13fe;
+    outline: 0.2rem solid #fff;
+  }
+  
+  20%, 24%, 55% {        
+    box-shadow: none;
+    outline: none;
   }
 }
